--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div>
+  <h2>矩形计算器</h2>
 <label for="">高度：</label>
-  <input id='height' type="text">
+  <input id="height" type="text">
   <br>
   <label for="">宽度：</label>
   <input type="" id="width">
